make sure primaryNavigation is visibile when interaction with revealNavigationButton

--- a/share/css/default/theme_layout/responsive.css
+++ b/share/css/default/theme_layout/responsive.css
@@ -68,6 +68,11 @@ div.fluid-video video {top: 0; left: 0; width: 100%; height: 100%; position: abs
     #contentSide {position: static!important; width: 100%!important;}
 }
 
+/*make sure primaryNavigation is visibile when interaction with revealNavigationButton */
+@media all and (min-width: 768px) {
+	#primaryNavigation {display: block!important;}
+}
+
 /* styles for iPhone/Android landscape (and really narrow browser windows) */
 @media all and (max-width: 480px) {
     #onxshop_cms_content { width: 100%; overflow: hidden; }
